--- a/global.css
+++ b/global.css
@@ -28,3 +28,8 @@
 .wp-meetup-event dl.wp-meetup-event-details dd {
     margin: 0 0 1.625em;
 }
+.wp-meetup-event .wp-meetup-plug {
+    font-size: .65em;
+    color: #666;
+    margin-bottom: 2.5em;
+}
