--- a/global.css
+++ b/global.css
@@ -5,12 +5,12 @@
     padding: 1.625em 1.625em 0;
     margin: 0 1.625em .75em 0;
     float: left;
-    width: 250px;
+    width: 230px;
 }
 .wp-meetup-event a.wp-meetup-event-link {
     display: block;
-    width: 100%;
-    padding: 5px 0;
+    width: 80%;
+    padding: 5px 10%;
     text-align: center;
     background: #E51937;
     border-radius: 10px;
