--- a/global.css
+++ b/global.css
@@ -56,17 +56,23 @@
 }
 #wp-meetup-calendar td ul li {
     list-style: none;
-    background: #E51937;
-    border-radius: 5px;
-    padding: 3px;
-    box-shadow: 0 0 5px 1px rgba(0,0,0,.3);
     margin-bottom: 1.5em;
 }
 #wp-meetup-calendar td ul li:last-child {
     margin-bottom: 0;
 }
 #wp-meetup-calendar td ul li a {
+    display: block;
     color: #ddd;
+    background: #E51937;
+    border-radius: 5px;
+    padding: 3px;
+    box-shadow: 0 0 5px 1px rgba(0,0,0,.3);
+    text-decoration: none;
+}
+#wp-meetup-calendar td ul li a:hover {
+    color: #fff;
+    box-shadow: 0 0 5px 1px rgba(102, 153, 255, 1);
 }
 #wp-meetup-calendar td li span {
     display: block;
